# clone-twiiter

./: .env  .gitignore  Dockerfile  Dockerfile.dev  README.md  alembic.ini  docker-compose-dev.yml  docker-compose.yml  env.example  initial_data.py  nginx.conf  pyproject.toml  requirements.txt  run.py  setup.cfg  task.py
app/: alembic.ini  config.py  initial_data.py  main.py  requirements.txt  settings.py  setup.cfg
app/api/: depends.py
app/api/v1/: api.py
app/api/v1/endpoints/: media.py  tweet.py  user.py
app/core/: app_events.py  user_current.py
app/crud/: media.py  post.py  tweet.py  user.py
app/db/: database.py  models.py  schemas.py
app/depends/: get_token_header.py
app/logger/: logger.py
app/migrations/: README  env.py  script.py.mako
app/migrations/versions/: 070ea9c0ce29_init.py  3423b3aaf7f4_init_db.py  df8568a0df6c_init_db.py  fa35d7d31a0b_migrations.py
app/models/: models.py
app/routers/: like.py  likes.py  media.py  medias.py  post.py  tweet.py  tweets.py  user.py  user_current.py  users.py
app/schemas/: schemas.py
app/static/js/: app.7c9275be.js  app.97f93d05.js  app.dda28e5a.js
app/tests/: conftest.py  test_likes.py  test_medias.py  test_tweets.py  test_users.py
app/utils/: errors.py  hashing.py  logger.py  loggers.json
example/: task3.py
example/templates/: post.html
migrations/: env.py
migrations/versions/: 3423b3aaf7f4_init_db.py
service/: docker-compose.yml
service/app/: .env  app.py  auth.py  crypt.py  database.py  dockerfile  forms.py  main.py  models.py  requirements.txt  schemas.py  settings.py  task.py  task10.py  task2.py  task3.py  task5.py  utils.py
service/app/static/css/: chunk-f896e3c6.c00c71ca.css
service/app/static/js/: app.bc7950bb.js  chunk-03b63e09.9d805846.js  chunk-0420bcc4.77329ea7.js  chunk-500cde1e.e78628b2.js  chunk-732a3e8c.d3cb80b2.js  chunk-f896e3c6.03e4fd9f.js  chunk-vendors.398321e0.js
service/app/templates/: index.html  login.html  login1.html
tests/: conftest.py  db_test.py  test_likes.py  test_medias.py  test_tweets.py  test_users.py
