[tool.poetry]
name = "python-advanced-diploma"
version = "0.1.0"
description = "Clone-tweeter"
authors = ["ramazan_aisaev <aisaev-68@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
asyncpg = "^0.27.0"
aiofiles = "^22.1.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = "^1.7.4"
fastapi = "^0.88.0"
pydantic = "^1.10.2"
uvicorn = "^0.20.0"
python-dotenv = "^0.21.0"
python-multipart = "^0.0.5"
alembic = "^1.9.1"
sqlalchemy = "^1.4.46"

[tool.poetry.group.dev.dependencies]
httpx = "^0.23.2"
wemake-python-styleguide = "^0.17.0"
pytest-asyncio = "^0.20.3"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

